@@ -1,3 +1,8 @@
+2008-06-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* src/ejabberd_c2s.erl: Finish ejabberd_c2s conversion with the
+	functions related to offline stanzas.
+
 2008-06-24  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/ejabberd_c2s.erl: The handle_info clause that treats routing
